--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MVP аналога популярной соц. сети для обмена фотографиями",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/Daria-Aleks/webdev-cw-instapro#readme",
   "dependencies": {
     "date-fns": "^2.30.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
